[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Bat_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://enemy_T2.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 17.7387, 15.6155 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 16.4788, 16.5461 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 27.8181, 15.9162 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 29.4843, 22.392 )

[sub_resource type="Animation" id=14]
resource_name = "flash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../enemy_T2/AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 3 )

[node name="enemy_T2" type="KinematicBody2D"]
collision_layer = 1028
collision_mask = 1025
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.223923, 0.202 )
frames = SubResource( 9 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5892 )
shape = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.630005, 34.6478 )
shape = SubResource( 17 )

[node name="hurt_box" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource( 15 )

[node name="hit_box" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 14 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -20.6362
margin_top = -53.9717
margin_right = 19.3638
margin_bottom = -33.9717
custom_fonts/font = SubResource( 16 )
text = "Desviou!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 134.415, -2.43877 )
scale = Vector2( 4.1, 3.3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="hurt_box" to="." method="_on_hurt_box_body_entered"]
[connection signal="area_entered" from="hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
